feat(auth): add auth with jwt spring security
